@@ -22,10 +22,13 @@ Class Welcome extends Welcome_Controller {
         $request = request('get', 'api/test/method.ajax');
         echo $request->exec()->response();
         */
-            
+        
+       
         echo '<a href="javascript:void(0);" onclick="send_ajax();">Ajax Request</a>';
                        
-        $data['var'] = 'and generated by ';  
+        $data['var'] = 'and generated by ';
+       
+          
         view_var('body', view('view_welcome', $data));
         view_layout('layout_welcome'); 
     }
